# keepassxc

./: CMakeLists.txt  Dockerfile  INSTALL.md  README.md  snapcraft.yaml
share/translations/: keepassxc_en.ts
src/: CMakeLists.txt  config-keepassx.h.cmake  main.cpp
src/browser/: BrowserAccessControlDialog.cpp  BrowserAccessControlDialog.h  BrowserAccessControlDialog.ui  BrowserAction.cpp  BrowserAction.h  BrowserCbor.cpp  BrowserCbor.h  BrowserClients.cpp  BrowserClients.h  BrowserEntryConfig.cpp  BrowserEntryConfig.h  BrowserMessageBuilder.cpp  BrowserMessageBuilder.h  BrowserOptionDialog.cpp  BrowserOptionDialog.h  BrowserOptionDialog.ui  BrowserPasskeys.cpp  BrowserPasskeys.h  BrowserPasskeysConfirmationDialog.cpp  BrowserPasskeysConfirmationDialog.h  BrowserPasskeysConfirmationDialog.ui  BrowserPasswordGeneratorWidget.cpp  BrowserPasswordGeneratorWidget.h  BrowserPasswordGeneratorWidget.ui  BrowserService.cpp  BrowserService.h  BrowserSettings.cpp  BrowserSettings.h  BrowserSettingsWidget.cpp  BrowserWebAuthn.cpp  BrowserWebAuthn.h  BrowserWebAuthnConfirmationDialog.cpp  BrowserWebAuthnConfirmationDialog.h  BrowserWebAuthnConfirmationDialog.ui  CMakeLists.txt  ChromeListener.cpp  ChromeListener.h  HostInstaller.cpp  HostInstaller.h  NativeMessagingBase.cpp  (+4 more)
src/browser/libsodium/: CMakeLists.txt
src/core/: Config.cpp  Config.h  PassphraseGenerator.cpp  Tools.cpp
src/gui/: AboutDialog.cpp  ApplicationSettingsWidget.cpp  DatabaseTabWidget.cpp  DatabaseTabWidget.h  DatabaseWidget.cpp  DatabaseWidget.h  MainWindow.cpp  PasswordGeneratorWidget.cpp
src/gui/dbsettings/: DatabaseSettingsDialog.cpp  DatabaseSettingsWidgetBrowser.h
src/gui/osutils/macutils/: AppKitImpl.mm
src/gui/passkeys/: PasskeyExportDialog.ui  PasskeyExporter.cpp  PasskeyImporter.cpp  PasskeyImporter.h
src/gui/reports/: ReportsDialog.cpp  ReportsDialog.h  ReportsPagePasskeys.cpp  ReportsWidgetPasskeys.cpp  ReportsWidgetPasskeys.h  ReportsWidgetPasskeys.ui
src/gui/webauthn/: PasskeyExporter.cpp  PasskeyImporter.cpp  PasskeyImporter.h
src/proxy/: CMakeLists.txt  NativeMessagingHost.cpp  NativeMessagingHost.h  keepassxc-proxy.cpp
tests/: CMakeLists.txt  TestBrowser.cpp  TestPasskeys.cpp  TestWebAuthn.cpp  TestWebAuthn.h
